--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnDatePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select Date"
@@ -62,7 +62,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selected Date"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/lightGrey"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="14000000"
+        android:textColor="@color/textBlue"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Selected Date"
+        android:textColor="@color/lightGrey"
         android:textSize="15sp"
         android:textStyle="bold"
         />
