--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="14000000"
+        android:text="---"
         android:textColor="@color/textBlue"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -80,7 +80,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Selected Date"
+        android:text="Calculated Minutes"
+        android:textColor="@color/lightGrey"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:id="@+id/tvAgeInHours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="---"
+        android:textColor="@color/textBlue"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculated Hours"
         android:textColor="@color/lightGrey"
         android:textSize="15sp"
         android:textStyle="bold"
